--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,16 +3,13 @@
         <h1 class="col-6"> <%= @merchant.name %> </h1>
         <ul class="nav nav-tabs col-6">
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Active</a>
+                <p class="nav-link" aria-current="page">Dashboard</p>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="<%=merchant_items_path(@merchant)%>">My Items</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link"> </a>
+                <a class="nav-link" href="<%= merchant_invoices_path(@merchant) %>">My Invoices</a>
             </li>
         </ul>
     </div>
