--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,7 +17,7 @@
 <div class="container" id="TabContent">
     <div class="row">
         <div class="col-6">
-            <table class="table table-dark table-striped" id="dash" role="tabpanel" aria-labelledby="dash-tab">
+            <table class="table table-dark table-striped" id="" role="tabpanel" aria-labelledby="dash-tab">
                 <h2> Items Ready To Ship </h2>
                 <thead>
                     <tr>
@@ -39,23 +39,21 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-6">
+        <div class="col-6" id="top_customers">
             <table class="table table-dark table-striped">
                 <h2> Favorite Customers </h2>
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Nubmer of Successful Orders</th>
+                        <th scope="col">Customer Name</th>
+                        <th scope="col">Number of Successful Transactions</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% @merchant.top_customers.each_with_index do |customer, index| %>
                     <tr>
                         <th scope="row"><%= index + 1 %></th>
-                        <th scope="row"><%= customer.first_name %></th>
-                        <th scope="row"><%= customer.last_name %></th>
+                        <th scope="row"><%= customer.first_name %> <%= customer.last_name %></th>
                         <th scope="row"><%= customer.transaction.count %></th>
                     </tr>
                     <% end %>
