--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,7 +16,7 @@
 </div>
 <div class="container" id="TabContent">
     <div class="row">
-        <div class="col-6">
+        <div class="col-6" id="items_to_ship">
             <table class="table table-dark table-striped" id="" role="tabpanel" aria-labelledby="dash-tab">
                 <h2> Items Ready To Ship </h2>
                 <thead>
