--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -54,7 +54,11 @@
                     <tr>
                         <th scope="row"><%= index + 1 %></th>
                         <th scope="row"><%= customer.first_name %> <%= customer.last_name %></th>
-                        <th scope="row"><%= customer.transaction.count %></th>
+                        <th scope="row">
+                            <% if customer.transaction.result = "success" %>
+                                <%= customer.transaction.count %>
+                            <% end %>
+                        </th>
                     </tr>
                     <% end %>
                 </tbody>
