write query for top 5

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,3 +3,5 @@
 <%= link_to "Dashboard", "/admin" %>
 <%= link_to "Merchants", "/admin/merchants" %>
 <%= link_to "Invoices", "/admin/invoices" %>
+
+<%= top_five_customers %>
