--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,4 +4,7 @@
 <%= link_to "Merchants", "/admin/merchants" %>
 <%= link_to "Invoices", "/admin/invoices" %>
 
-<%= top_five_customers %>
+<h3>Top Customers</h3>
+<% @top_five_customers.each_with_index do |customer, index| %>
+  <p><%= "#{index + 1}. #{customer.full_name} - #{customer.count_of_purchases} purchases"  %></p>
+<% end %>
