--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,7 +4,13 @@
 <%= link_to "Merchants", "/admin/merchants" %>
 <%= link_to "Invoices", "/admin/invoices" %>
 
-<h3>Top Customers</h3>
-<% @top_five_customers.each_with_index do |customer, index| %>
-  <p><%= "#{index + 1}. #{customer.full_name} - #{customer.count_of_purchases} purchases"  %></p>
-<% end %>
+<div>
+  <h3>Top Customers</h3>
+  <% @top_five_customers.each_with_index do |customer, index| %>
+    <p><%= "#{index + 1}. #{customer.full_name} - #{customer.count_of_purchases} purchases"  %></p>
+  <% end %>
+</div>
+
+<div>
+<h3>Incomplete Invoices</h3>
+</div>
