--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @item.name %></h1>
 <p> Description: <%= @item.description %> </p>
 <p> Current Price: <%= @item.to_dollars %> </p>
+<p><%= link_to "Update Item", "#{@item.id}/edit" %></p>
