--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
   <% @merchants.each do |merchant| %></li>
-    <li><%= merchant.name %></li>
+    <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
   <% end %>
 </ol>
