--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @item.name %></h1>
 <p> Description: <%= @item.description %> </p>
-<p> Current Price: <%= @item.to_dollars %> </p>
+<p> Current Price: <%= number_to_currency(@item.unit_price / 100) %> </p>
