--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
 <h1>My Items</h1>
-<% @items.each do |item| %>
+<% @merchant.items.each do |item| %>
   <p><%= link_to item.name, "items/#{item.id}" %></p>
 <% end %>
