Add migration which adds a status column to the merchants table which has a default value of '0', which is an enum where '0' is disabled and '1' is enabled.

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,7 +1,18 @@
 <h1> Admin: Merchants </h1>
 
-<ol>
-  <% @merchants.each do |merchant| %></li>
-    <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
-  <% end %>
-</ol>
+<div id="enabled _merchants">
+  <ol>
+    <% @merchants.each do |merchant| %></li>
+      <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
+    <% end %>
+  </ol>
+</div>
+
+<div id="disabled_merchants">
+  <ol>
+    <% @merchants.each do |merchant| %></li>
+      <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
+    <% end %>
+  </ol>
+</div>
+
