Refactor view file so that there are seperate sections displaying enabled vs disabled routes.

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,9 +1,9 @@
 <h1> Admin: Merchants </h1>
 
-<div id="enabled _merchants">
+<div id="enabled_merchants">
   <h2> Enabled Merchants </h2>
   <ol>
-    <% @merchants.each do |merchant| %></li>
+    <% @enabled_merchants.each do |merchant| %>
       <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
     <% end %>
   </ol>
@@ -12,9 +12,10 @@
 <div id="disabled_merchants">
   <h2> Disabled Merchants </h2>
   <ol>
-    <% @merchants.each do |merchant| %></li>
+    <% @disabled_merchants.each do |merchant| %>
       <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
     <% end %>
   </ol>
 </div>
+
 
