--- a/app/views/admin/merchants/show.html.erb
+++ b/app/views/admin/merchants/show.html.erb
@@ -2,6 +2,4 @@
 
 <%= @merchant.name %>
 
-<%= form_with model: Merchant, data: {turbo: false} do |f| %>
-  <%= f.label :name %>
-  <%= f. %>
+<p><%= link_to "Update Merchant", edit_admin_merchant_path(@merchant) %></p>
