--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+  <% flash.each do |type, msg| %>
+    <div>
+      <%= msg %>
+    </div>
+  <% end %>
     <section class="border border-3 border-success" >
       <h1 class="text-bg-dark p-3 text-center w-50 mx-auto"> Little Etsy Shop </h1>
     <%= yield %>
