Add within tests to see merchants are in correct place based off status and will change when buttons are clicked

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -4,7 +4,10 @@
   <h2> Enabled Merchants </h2>
   <ol>
     <% @enabled_merchants.each do |merchant| %>
-      <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
+      <li id="enabled_merchant_<%= merchant.id %>">
+        <%= link_to "#{merchant.name}", admin_merchant_path(merchant) %>
+        <%= button_to 'Disable', admin_merchant_path(merchant, status: :disabled), method: :patch, class: 'btn btn-warning' %>
+      </li>
     <% end %>
   </ol>
 </div>
@@ -13,7 +16,10 @@
   <h2> Disabled Merchants </h2>
   <ol>
     <% @disabled_merchants.each do |merchant| %>
-      <li><%= link_to "#{merchant.name}", admin_merchant_path(merchant) %></li>
+      <li id="disabled_merchant_<%= merchant.id %>">
+        <%= link_to "#{merchant.name}", admin_merchant_path(merchant) %>
+        <%= button_to 'Enable', admin_merchant_path(merchant, status: :enabled), method: :patch, class: 'btn btn-success' %>
+      </li>
     <% end %>
   </ol>
 </div>
