--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,13 +1,13 @@
 <h1>Edit Item</h1>
 <%= form_with url: "/merchants/#{@merchant.id}/items/#{@item.id}", method: :patch, local: true do |f| %>
   <p><%= f.label :name %>
-  <%= f.text_field :name %></p>
+  <%= f.text_field :name, value: @item.name %></p>
 
   <p><%= f.label :description %>
-  <%= f.text_field :description %></p>
+  <%= f.text_field :description, value: @item.description %></p>
 
   <p><%= f.label :unit_price %>
-  <%= f.text_field :unit_price %></p>
+  <%= f.text_field :unit_price, value: @item.unit_price %></p>
 
   <p><%= f.submit "Update Item" %></p>
 <% end %>
