--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Admin: Merchants </h1>
 
+<h2> <%= link_to 'New Merchant', new_admin_merchant_path %> 
+
 <div id="enabled_merchants">
   <h2> Enabled Merchants </h2>
   <ol>
