Refactor the test so that the within blocks work correctly

--- a/app/views/admin/merchants/new.html.erb
+++ b/app/views/admin/merchants/new.html.erb
@@ -20,5 +20,5 @@
   <%= form.label :name %>
   <%= form.text_field :name %>
 
-  <%= form.submit 'Submit', class: 'btn btn-primary' %>
+  <%= form.submit "Submit", class: 'btn btn-primary' %>
 <% end %>
