--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -20,7 +20,12 @@
                 <td><%= invoice_item.item.name %></td>
                 <td><%= invoice_item.quantity %></td>
                 <td><%= number_to_currency(invoice_item.unit_price / 100.0) %></td>
-                <td><%= invoice_item.status %></td>
+                <td>
+                    <%= form_with model: invoice_item, url: merchant_invoice_invoice_item_path(@merchant, @invoice, invoice_item), method: :patch, local: true do |form| %>
+                    <%= form.select :status, options_for_select(InvoiceItem.statuses.keys.map { |status| [status.titleize, status] }, invoice_item.status) %>
+                    <%= form.submit 'Update Item Status' %>
+                    <% end %>
+                </td>
             </tr>
         <% end %>
         <% end %>
