--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,11 +1,31 @@
 <h1>My Items</h1>
-<% @merchant.items.each do |item| %>
-<div id="item-<%= item.id %>">
-  <p><%= link_to item.name, "items/#{item.id}" %></p>
-  <% if item.status == "Disabled" %>
-  <%= button_to "Enable", "/merchants/#{@merchant.id}/items/#{item.id}/update", method: :patch %>
-  <% end %>
-  <% if item.status == "Enabled" %>
-  <%= button_to "Disable", "/merchants/#{@merchant.id}/items/#{item.id}/update", method: :patch %>
-  <% end %>
-<% end %>
+<div id="enabled_items">
+  <h2> Enabled Items </h2>
+  <ol>
+    <% @enabled_items.each do |item| %>
+      <li id="enabled_item_<%= item.id %>">
+        <%= link_to "#{item.name}", "items/#{item.id}" %>
+         <%= button_to "Disable", merchant_items_path(item, status: :disabled), method: :patch, class: 'btn btn-warning' %>
+      </li>
+    <% end %>
+  </ol>
+</div>
+
+<div id="disabled_items">
+  <h2> Disabled Items </h2>
+  <ol>
+    <% @disabled_items.each do |item| %>
+      <li id="disabled_item_<%= item.id %>">
+        <%= link_to "#{item.name}", "items/#{item.id}" %>
+        <%= button_to "Enable", merchant_items_path(item, status: :enabled), method: :patch, class: 'btn btn-success' %>
+      </li>
+    <% end %>
+  </ol>
+</div>
+
+
+
+
+
+
+
