Add view functionality for best day for a merchants transactions.

--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -26,9 +26,11 @@
   </ol>
 </div>
 
-<div>
-<h2> Top Merchants </h2>
+<div id="top_merchants">
+  <h2>Top Merchants</h2>
   <% @merchants.top_five_merchants.each_with_index do |merchant, index| %>
     <p><%= link_to "#{index + 1}. #{merchant.name} - $#{merchant.revenue} in sales", admin_merchant_path(merchant) %></p>
+    <p>Top day for <%= "#{merchant.name} was #{merchant.best_day}" %></p>
   <% end %>
 </div>
+
