--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,5 @@
 <h1>My Items</h1>
+<p><%= link_to "New Item", "/merchants/#{@merchant.id}/items/new" %></p>
 <div id="enabled_items">
   <h2> Enabled Items </h2>
   <ol>
